@@ -1,2 +1,0 @@
-q$Id$
-TeX input files for HiTeX. Eventually will end up in the Master/ runtime tree.
