@@ -1,0 +1,8 @@
+% $Id$
+% Karl Berry, 2022. Public domain.
+%\input plain.tex
+\input etex.src
+\input ifhint.tex
+\input hiplainpage.tex
+\dump
+\endinput
