@@ -1,3 +1,5 @@
+% Public domain. Originally written by Martin Ruckert.
+
 \newif\ifhint
 % How to test for the HiTeX engine
 \expandafter\ifx\csname HINTversion\endcsname\relax
