@@ -1,3 +1,7 @@
+2022-03-05  Karl Berry  <karl@freefriends.org>
+
+	* texmf.cnf (TEXINPUTS.hi*tex): new entries.
+
 2022-02-27  Karl Berry  <karl@tug.org>
 
 	* texmf.cnf (nest_size): 500 -> 1000.
